flecs_ecs/tests/compile_fail/query_iter_not_send.stderr
error[E0277]: `*mut ecs_world_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_world_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_world_t`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*const u64` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*const u64` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*const u64`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut *mut c_void` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut *mut c_void` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut *mut c_void`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut *const ecs_table_record_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut *const ecs_table_record_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut *const ecs_table_record_t`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*const i32` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*const i32` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*const i32`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_table_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_table_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_table_t`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut u64` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut u64` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut u64`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*const ecs_query_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*const ecs_query_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*const ecs_query_t`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut c_void` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut c_void` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_iter_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_iter_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_iter_t`
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_stack_cursor_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_stack_cursor_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_stack_cursor_t`
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_var_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_var_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_var_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_query_var_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_query_var_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_query_var_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_query_op_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_query_op_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_query_op_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_query_op_ctx_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_query_op_ctx_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_query_op_ctx_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_query_cache_group_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_query_cache_group_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_query_cache_group_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_vec_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_vec_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_vec_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_query_cache_match_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_query_cache_match_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_query_cache_match_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*mut ecs_query_op_profile_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*mut ecs_query_op_profile_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*mut ecs_query_op_profile_t`
note: required because it appears within the type `ecs_query_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_query_iter_t {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*const ecs_table_record_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*const ecs_table_record_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*const ecs_table_record_t`
note: required because it appears within the type `ecs_each_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_each_iter_t {
   |            ^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`

error[E0277]: `*const ecs_table_cache_hdr_t` cannot be sent between threads safely
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |           s.spawn(move || {
   |             ----- ^------
   |             |     |
   |  ___________|_____within this `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`
   | |           |
   | |           required by a bound introduced by this call
19 | |             drop(iter);
20 | |         });
   | |_________^ `*const ecs_table_cache_hdr_t` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/compile_fail/query_iter_not_send.rs:18:17: 18:24}`, the trait `Send` is not implemented for `*const ecs_table_cache_hdr_t`
note: required because it appears within the type `ecs_table_cache_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_table_cache_iter_t {
   |            ^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_each_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_each_iter_t {
   |            ^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t__bindgen_ty_1`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub union ecs_iter_private_t__bindgen_ty_1 {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_private_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_private_t {
   |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `ecs_iter_t`
  --> $WORKSPACE/flecs_ecs_sys/src/bindings.rs
   |
   | pub struct ecs_iter_t {
   |            ^^^^^^^^^^
note: required because it appears within the type `QueryIter<'_, (), &Position>`
  --> src/core/query_iter.rs
   |
   | pub struct QueryIter<'a, P, T>
   |            ^^^^^^^^^
note: required because it's used within this closure
  --> tests/compile_fail/query_iter_not_send.rs:18:17
   |
18 |         s.spawn(move || {
   |                 ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`
